--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
             <div id="start-button">Start</div>
             <div></div>
         </div>
+        <audio id="music" src="sound/bensound-dreams.mp3" preload="auto" loop></audio>
     </div>
+    <footer>Music : <a href="https://www.bensound.com/royalty-free-music/track/dreams-chill-out">Royalty Free Music from Bensound</a></footer>
 </body>
 </html>
