Fix style for music credits

--- a/index.html
+++ b/index.html
@@ -27,6 +27,6 @@
         </div>
         <audio id="music" src="sound/bensound-dreams.mp3" preload="auto" loop></audio>
     </div>
-    <footer>Music : <a href="https://www.bensound.com/royalty-free-music/track/dreams-chill-out">Royalty Free Music from Bensound</a></footer>
+    <footer style="position:fixed;bottom:1em;left:1em;font-size:12px">Music : <a href="https://www.bensound.com/royalty-free-music/track/dreams-chill-out">Royalty Free Music from Bensound</a></footer>
 </body>
 </html>
